Add headings and clean up JS file

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </section>
 
     <section>
+      <h2>Style CSS</h2>
       <p>
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
@@ -91,6 +92,7 @@
     </section>
 
     <section>
+      <h2>Legend HTML</h2>
       <p>
         <label for="mn-demo" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="mn-demo" class="margin-toggle"/>
